--- a/experimental/squirrel/BUILD.bazel
+++ b/experimental/squirrel/BUILD.bazel
@@ -60,7 +60,7 @@ spu_cc_library(
         "//libspu/mpc/cheetah/rlwe:cheetah_rlwe",
         "//libspu/mpc/cheetah/rlwe:lwe",
         "//libspu/mpc/cheetah/rlwe:packlwes",
-        "@com_github_eigenteam_eigen//:eigen3",
+        "@eigen_archive//:eigen3",
         "@com_github_microsoft_seal//:seal",
         "@yacl//yacl/utils:elapsed_timer",
     ],
